# rancldkcnd

./: .env  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: api.py  config.py  db.py  exception_handlers.py  logger.py
app/exceptions/: client.py  operator.py  ticket.py
app/models/: __init__.py  client.py  enum.py  message.py  operator.py  ticket.py
app/providers/: config.py  container.py  db.py  repo.py  services.py
app/repo/: client.py  operator.py  ticket.py
app/routers/: client.py  operator.py  ticket.py
app/schemas/: base.py  client.py  operator.py  ticket.py
app/services/: client.py  operator.py  ticket.py
app/utils/: pagination.py  ticket_status.py
migrations/: env.py
migrations/versions/: 5c20deca0538_zapusk.py  8e0b76e9355e_add_is_active_field_to_client.py
